fix: hadolint DL3048 + DL3018 in base Dockerfiles
- DL3048: rename rdv.spec_version label to rdv.spec-version (OCI label
  keys don't allow underscores after dot separators)
- DL3018: add inline hadolint ignore for apk add — alpine:3.19 base
  already pins the package set, individual version pinning is redundant

--- a/images/rdv-base-minimal/Dockerfile
+++ b/images/rdv-base-minimal/Dockerfile
@@ -19,7 +19,7 @@ FROM gcr.io/distroless/static-debian12:nonroot
 LABEL org.opencontainers.image.title="rdv-base:minimal"
 LABEL org.opencontainers.image.description="rdv base image for compiled binaries"
 LABEL org.opencontainers.image.source="https://github.com/lintility/random.dev"
-LABEL rdv.spec_version="0.1"
+LABEL rdv.spec-version="0.1"
 
 # Copy the entrypoint wrapper
 COPY --from=builder /entrypoint /rdv-entrypoint
