--- a/images/rdv-base-runtime/Dockerfile
+++ b/images/rdv-base-runtime/Dockerfile
@@ -10,9 +10,10 @@ FROM alpine:3.19
 LABEL org.opencontainers.image.title="rdv-base:runtime"
 LABEL org.opencontainers.image.description="rdv base image for interpreted tools (Node, Python, shell)"
 LABEL org.opencontainers.image.source="https://github.com/lintility/random.dev"
-LABEL rdv.spec_version="0.1"
+LABEL rdv.spec-version="0.1"
 
 # Install common runtimes + contract runtime deps
+# hadolint ignore=DL3018 -- base image version (alpine:3.19) pins the package set; individual pinning is redundant here
 RUN apk add --no-cache \
     python3 \
     py3-pip \
