fix: correct hadolint inline ignore syntax for DL3018

--- a/images/rdv-base-runtime/Dockerfile
+++ b/images/rdv-base-runtime/Dockerfile
@@ -13,7 +13,8 @@ LABEL org.opencontainers.image.source="https://github.com/lintility/random.dev"
 LABEL rdv.spec-version="0.1"
 
 # Install common runtimes + contract runtime deps
-# hadolint ignore=DL3018 -- base image version (alpine:3.19) pins the package set; individual pinning is redundant here
+# Alpine base version (3.19) already pins the package set
+# hadolint ignore=DL3018
 RUN apk add --no-cache \
     python3 \
     py3-pip \
