--- a/tools/rdv-scan/Dockerfile
+++ b/tools/rdv-scan/Dockerfile
@@ -6,6 +6,7 @@ LABEL org.opencontainers.image.description="Vulnerability scanner using grype"
 LABEL org.opencontainers.image.source="https://github.com/lintility/random.dev"
 LABEL rdv.spec-version="0.1"
 
+SHELL ["/bin/ash", "-o", "pipefail", "-c"]
 # hadolint ignore=DL3018
 RUN apk add --no-cache bash curl jq ca-certificates \
     && curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
