fix(ci): suppress DL4006 on curl-pipe installs in rdv-sbom and rdv-scan [WOR-5 WOR-6]
SHELL directive sets ash+pipefail but hadolint still fires DL4006 on the
RUN; add DL4006 to the inline ignore alongside DL3018.

--- a/tools/rdv-sbom/Dockerfile
+++ b/tools/rdv-sbom/Dockerfile
@@ -8,7 +8,7 @@ LABEL rdv.spec-version="0.1"
 
 # Install syft (Anchore SBOM generator) + deps
 SHELL ["/bin/ash", "-o", "pipefail", "-c"]
-# hadolint ignore=DL3018
+# hadolint ignore=DL3018,DL4006
 RUN apk add --no-cache bash curl jq ca-certificates \
     && curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
        | sh -s -- -b /usr/local/bin \
